Avoid too big pin path section

--- a/src/ui/components/render-tree/TreeHeader.css
+++ b/src/ui/components/render-tree/TreeHeader.css
@@ -2,6 +2,8 @@
   background: white;
 }
 .render-tree-header__path {
+  max-height: 50px;
+  overflow: auto;
   padding: 3px 6px;
   background-color: #f6f6f6;
   border-bottom: 1px solid #ddd;
